# tikzit

./: .appveyor.yml  .gitignore  .travis.yml  Brewfile  CMakeLists.txt  Doxyfile  Info.plist  Makefile  Makefile.am  README  README.md  README.release  TODO  bison.pri  configure.ac  default.nix  deploy-linux.sh  deploy-osx.sh  deploy-win.bat  flex.pri  qt.conf  stylepalette.cpp  stylepalette.h  stylepalette.ui  texopen.py  tikzfiles.reg  tikzit.nix  tikzit.pro  tikzit.qrc  tikzit.spec  tikzitdoc.icns  tikzlexer.h
src/: Makefile.am  main.cpp  tikzit.cpp  tikzit.h  util.cpp  util.h
src/common/: BasicMapTable.h  BasicMapTable.m  ColorRGB.h  Edge.m  EdgeStyle.m  Graph.m  GraphElementData.m  GraphElementProperty.m  Grid.h  Grid.m  NSError+Tikzit.h  NSFileManager+Utils.h  NSFileManager+Utils.m  NSString+LatexConstants.m  Node.h  Node.m  PickSupport.h  PickSupport.m  Preambles.h  Preambles.m  RegularPolyShape.m  Shape.h  Shape.m  SupportDir.m  TikzGraphAssembler.m  TikzShape.h  Transformer.m  tikzlexer.lm  tikzparser.ym  util.h  util.m
src/common/test/: common.m  parser.m  test.h  test.m
src/data/: delimitedstringvalidator.cpp  delimitedstringvalidator.h  edge.cpp  edge.h  edgestyle.cpp  edgestyle.h  graph.cpp  graph.h  graphelementdata.cpp  graphelementdata.h  graphelementproperty.cpp  graphelementproperty.h  node.cpp  node.h  nodestyle.cpp  nodestyle.h  nodestylelist.cpp  nodestylelist.h  path.cpp  path.h  pdfdocument.cpp  pdfdocument.h  project.cpp  project.h  style.cpp  style.h  stylelist.cpp  stylelist.h  tikzassembler.cpp  tikzassembler.h  tikzdocument.cpp  tikzdocument.h  tikzgraphassembler.h  tikzlexer.l  tikzlexer.lexer.cpp  tikzparser.parser.hpp  tikzparser.y  tikzparserdefs.h  tikzstyles.cpp  tikzstyles.h
src/gui/: commands.h  delimitedstringitemdelegate.cpp  delimitedstringitemdelegate.h  edgeitem.cpp  edgeitem.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  latexprocess.cpp  latexprocess.h  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodeitem.cpp  nodeitem.h  pathitem.cpp  pathitem.h  preferencedialog.cpp  preferencedialog.h  preferencedialog.ui  previewwindow.cpp  previewwindow.h  previewwindow.ui  propertypalette.cpp  propertypalette.h  propertypalette.ui  styleeditor.cpp  styleeditor.h  styleeditor.ui  stylepalette.cpp  stylepalette.h  stylepalette.ui  tikzscene.cpp  tikzscene.h  tikzview.cpp  tikzview.h  toolpalette.cpp  (+3 more)
src/linux/: CairoRenderContext.m  Edge+Render.m  EdgeStyle+Storage.h  FileChooserDialog.h  FileChooserDialog.m  GraphInputHandler.h  GraphRenderer.h  InputDelegate.h  MainWindow.m  Menu.m  NSFileManager+Glib.m  Node+Render.m  NodeStyleEditor.h  NodeStyleEditor.m  NodeStyleSelector.h  PreambleEditor.h  PreambleEditor.m  PreviewRenderer.h  PreviewWindow.m  PropertyListEditor.m  PropertyPane.m  Surface.h  TZFoundation.h  TikzDocument.h  clipboard.m  logo.h  logo.m  main.m  mkdtemp.m
src/osx/: AppDelegate.h  CALayer+DrawLabel.h  CALayer+DrawLabel.m  Graph+Coder.m  GraphicsView.h  MultiField.m  NodeLayer.h  NodeSelectionLayer.h  NodeStyle+Coder.m  PreambleController.h  PreviewController.h  PreviewController.m  StylePaletteController.m  TikzParser.h  TikzParser.m  TikzWindowController.h  TikzWindowController.m  ToolPaletteController.m
src/test/: testmain.cpp  testparser.cpp  testparser.h  testtest.cpp  testtest.h  testtikzoutput.cpp  testtikzoutput.h
tikzit/: .gitignore  INSTALL  Makefile.am  NEWS  README  README.release  TODO  TikZiT-Info.plist  TikZiT_Prefix.pch  bison.pri  configure.ac  flex.pri  graphelementdata.cpp  graphelementdata.h  graphelementproperty.cpp  graphelementproperty.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  propertypalette.cpp  target_wrapper.sh  tikzit.pro  tikzit.spec  tikzlexer.h  tikzscene.cpp  tikzscene.h  toolpalette.cpp  toolpalette.h
tikzit/English.lproj/: MainMenu.xib  Preamble.xib  Preview.xib  PropertyInspector.xib  StylePalette.xib  TikzDocument.xib  UserDefaults.plist
tikzit/TikZiT.xcodeproj/: project.pbxproj
tikzit/docs/images/: apple.ai  source.ai
tikzit/docs/sourceforge/: README.mkd
tikzit/docs/web/: main.css
tikzit/m4/: objc.m4
tikzit/scripts/: prepare_release.sh
tikzit/share/: Makefile.am
tikzit/share/applications/: tikzit.desktop
tikzit/src/: Makefile.am  main.cpp  tikzit.cpp  tikzit.h  util.h
tikzit/src/common/: CircleShape.m  ColorRGB.h  ColorRGB.m  DiamondShape.h  DiamondShape.m  Edge.h  Edge.m  EdgeStyle.h  EdgeStyle.m  Graph.h  Graph.m  GraphChange.h  GraphChange.m  GraphElementData.h  GraphElementData.m  GraphElementProperty.h  GraphElementProperty.m  Grid.m  NSString+LatexConstants.h  NSString+LatexConstants.m  NSString+Tikz.h  NSString+Tikz.m  NSString+Util.m  Node.h  Node.m  NodeStyle.h  NodeStyle.m  PickSupport.m  Preambles.h  Preambles.m  PropertyHolder.m  RColor.h  RectangleShape.m  RegularPolyShape.h  RegularPolyShape.m  Shape.m  StyleManager.h  StyleManager.m  SupportDir.h  SupportDir.m  (+10 more)
tikzit/src/data/: edge.cpp  edge.h  graph.cpp  graph.h  graphelementdata.cpp  graphelementdata.h  graphelementproperty.cpp  graphelementproperty.h  node.cpp  node.h  nodestyle.cpp  nodestyle.h  tikzdocument.cpp  tikzdocument.h  tikzgraphassembler.cpp  tikzgraphassembler.h  tikzlexer.l  tikzlexer.lpp  tikzparser.parser.cpp  tikzparser.y  tikzparser.ypp  tikzparserdefs.h
tikzit/src/gtk/: Application.h  Application.m  BoundingBoxTool.h  BoundingBoxTool.m  CairoRenderContext.m  ColorRGB+IntegerListStorage.h  ColorRGB+IntegerListStorage.m  Configuration.h  Configuration.m  ContextWindow.h  ContextWindow.m  CreateEdgeTool.h  CreateEdgeTool.m  CreateNodeTool.h  CreateNodeTool.m  DocumentContext.h  Edge+Render.h  Edge+Render.m  EdgeStyle+Storage.m  EdgeStyleEditor.h  EdgeStyleEditor.m  EdgeStyleSelector.h  EdgeStyleSelector.m  EdgeStylesModel.h  EdgeStylesModel.m  EdgeStylesPalette.m  GraphEditorPanel.h  GraphEditorPanel.m  GraphInputHandler.h  GraphInputHandler.m  GraphRenderer.h  GraphRenderer.m  HandTool.h  HandTool.m  InputDelegate.h  MainWindow.h  MainWindow.m  Menu.h  Menu.m  Node+Render.m  (+54 more)
tikzit/src/gui/: commands.h  (+20 more)
(+331 files in other folders)
